@@ -105,7 +105,8 @@
 							<version>0.2.0</version>
 						</dependency>
 					</annotationProcessorPaths>
-				</configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
